--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,91 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vue Quiz App</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://unpkg.com/element-plus/dist/index.css" rel="stylesheet">
-  <link rel="stylesheet" href="quiz.css">
-</head>
-<body>
-  <div id="app" class="container mt-5">
-    <div class="quiz-container">
-      <h1 class="mb-4">{{ currentQuestion.text }}</h1>
-
-      <!-- Options -->
-      <div v-if="currentQuestion.type !== 'dropdown'">
-        <ul class="list-group">
-          <li
-            v-for="(option, index) in currentQuestion.options"
-            :key="index"
-            class="list-group-item"
-            :draggable="isFirstQuestion"
-            @dragstart="isFirstQuestion ? startDrag(index) : null"
-            @dragover.prevent="isFirstQuestion ? $event.preventDefault() : null"
-            @drop="isFirstQuestion ? dropOption(index) : null"
-          >
-            {{ option }}
-          </li>
-        </ul>
-      </div>
-
-      <!-- Dropdown for the total number of travelers -->
-      <div v-if="currentQuestion.type === 'dropdown'">
-        <select v-model="answers[currentQuestionIndex]" class="form-select mt-3">
-          <option v-for="option in currentQuestion.options" :key="option" :value="option">{{ option }}</option>
-        </select>
-      </div>
-
-      <!-- Date and Time Picker -->
-      <div v-if="isDateTimeQuestion" class="mt-3">
-        <el-date-picker
-          v-model="selectedDate"
-          type="date"
-          placeholder="Pick a date"
-          value-format="yyyy-MM-dd"
-          class="mb-3 w-100"
-          @change="saveDate"
-        ></el-date-picker>
-        <el-time-picker
-          v-model="selectedTimeRange"
-          is-range
-          placeholder="Select time range"
-          arrow-control
-          format="HH:mm"
-          class="w-100"
-          @change="saveTimeRange"
-        ></el-time-picker>
-      </div>
-
-      <!-- Navigation Buttons -->
-      <div class="mt-4">
-        <button class="btn btn-secondary me-2" @click="prevQuestion" :disabled="currentQuestionIndex === 0">
-          Previous
-        </button>
-        <button class="btn btn-primary" @click="nextQuestion" :disabled="currentQuestionIndex === questions.length - 1">
-          Next
-        </button>
-      </div>
-
-      <!-- Progress Bar -->
-      <div class="progress mt-4">
-        <div
-          class="progress-bar"
-          role="progressbar"
-          :style="{ width: progressPercentage + '%' }"
-          :aria-valuenow="progressPercentage"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        >
-          {{ progressText }}
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="https://unpkg.com/element-plus"></script>
-  <script src="quiz.js"></script>
-</body>
+<html lang="">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TripTailor - Customizer</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/quiz/quiz.js"></script>
+  </body>
 </html>
